View Issue Details

IDProjectCategoryView StatusLast Update
0024790Open CASCADEOCCT:Modeling Algorithmspublic2022-04-19 15:47
Reporterjgv Assigned Toknosulko  
PrioritynormalSeverityminor 
Status assignedResolutionopen 
Product Version6.7.1 
Target Version7.7.0 
Summary0024790: Modeling Algorithms - missing intersection curve between two surfaces
DescriptionMissing intersection curve between two surfaces: the section is not closed.
Steps To ReproduceUse the following commands to reproduce the problem:
pload MODELING

#
restore fz33.brep b1
restore fz46.brep b2
bop b1 b2
bopsection res

#
mksurface s1 b1
mksurface s2 b2

intersect i s1 s2
#
# Result:
# The One intersection curve "i".
# But there should be two intersection curves "i_1, i_2" 
TagsNo tags attached.
Test case number

Attached Files

  • fz33.brep (378,086 bytes)
  • fz46.brep (319,291 bytes)

Activities

abv

2014-09-12 14:31

manager   ~0031667

Julia, could you please attach shapes mentioned in the issue?

jgv

2014-09-17 14:56

developer  

fz33.brep (378,086 bytes)

jgv

2014-09-17 15:33

developer  

fz46.brep (319,291 bytes)

abv

2014-09-17 15:51

manager   ~0031812

The problem exists on current master. Note that bopsection produces visibly complete section (two edges)

nbv

2015-12-07 15:38

developer   ~0048800

On the current MASTER:

1. The bopsection result is OK.
2. The intersection result is incomplete as before.

git

2022-04-19 15:47

administrator   ~0108029

Branch CR24790 has been created by knosulko.

SHA-1: d9d4c8b9221006481f03e1e05fe29e6dc7ae2aad


Detailed log of new commits:

Author: knosulko
Date: Tue Apr 19 15:30:25 2022 +0300

    0024790: Modeling Algorithms - missing intersection curve between two surfaces.
    
    Adaptor3d/Adaptor3d_TopolTool.cxx - increasing minimal nb sample-points for BSpline surfaces.

Issue History

Date Modified Username Field Change
2014-04-02 16:58 jgv New Issue
2014-04-02 16:58 jgv Assigned To => ifv
2014-04-02 16:59 jgv Assigned To ifv => jgv
2014-04-02 17:00 jgv Steps to Reproduce Updated
2014-09-12 14:31 abv Note Added: 0031667
2014-09-12 14:31 abv Status new => feedback
2014-09-12 14:31 abv Target Version => 6.8.0
2014-09-17 14:56 jgv File Added: fz33.brep
2014-09-17 15:33 jgv File Added: fz46.brep
2014-09-17 15:35 jgv Steps to Reproduce Updated
2014-09-17 15:51 abv Note Added: 0031812
2014-09-17 15:51 abv Status feedback => assigned
2014-09-17 15:51 abv Target Version 6.8.0 => 7.1.0
2015-04-10 16:13 nbv Assigned To jgv => nbv
2015-12-07 15:38 nbv Note Added: 0048800
2016-10-25 19:04 msv Target Version 7.1.0 => 7.2.0
2017-07-24 09:33 msv Target Version 7.2.0 => 7.3.0
2017-12-05 17:08 msv Target Version 7.3.0 => 7.4.0
2019-08-12 16:37 msv Target Version 7.4.0 => 7.5.0
2020-09-14 22:58 msv Target Version 7.5.0 => 7.6.0
2021-08-29 18:53 msv Target Version 7.6.0 => 7.7.0
2022-03-24 11:29 azv Assigned To nbv => knosulko
2022-03-24 11:33 kgv Summary Missing intersection curve between two surfaces. => Modeling Algorithms - ьissing intersection curve between two surfaces
2022-03-24 11:33 kgv Steps to Reproduce Updated
2022-03-24 11:33 kgv Summary Modeling Algorithms - ьissing intersection curve between two surfaces => Modeling Algorithms - missing intersection curve between two surfaces
2022-03-24 11:33 kgv Product Version => 6.7.1
2022-03-25 15:52 knosulko Time allocated 24.3.2022: 8 h. => set
2022-03-25 15:52 knosulko Time allocated 25.3.2022: 8 h. => set
2022-04-04 10:37 knosulko Time allocated 28.3.2022: 8 h. => set
2022-04-04 10:38 knosulko Time allocated 29.3.2022: 8 h. => set
2022-04-04 10:38 knosulko Time allocated Deleted 2022-03-29: 8,00 h. => deleted
2022-04-04 10:38 knosulko Time allocated 29.3.2022: 8 h. => set
2022-04-04 10:39 knosulko Time allocated 30.3.2022: 8 h. => set
2022-04-04 10:40 knosulko Time allocated 31.3.2022: 8 h. => set
2022-04-04 10:40 knosulko Time allocated 1.4.2022: 8 h. => set
2022-04-19 15:47 git Note Added: 0108029