0024790: Modeling Algorithms - missing intersection curve between two surfaces.

Adaptor3d/Adaptor3d_TopolTool.cxx - increasing minimal nb sample-points for BSpline surfaces.